[package]
name = "hash_map_diff"
version = "0.1.1"
edition = "2021"
authors = ["Tesel"]
license = "MIT"
description = "Comparing changes between two HashMaps"
repository = "https://github.com/Tesel/hash_map_diff"
keywords = ["hashmap", "diff", "subtract"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
